[gd_scene load_steps=8 format=3 uid="uid://wlet6t44g8qy"]

[ext_resource type="Script" path="res://Main folder/Minigames folder/minigames_2.gd" id="1_hk1s2"]
[ext_resource type="StyleBox" uid="uid://cdd5dukl1knma" path="res://button_idle_style.tres" id="2_an4yq"]
[ext_resource type="FontFile" uid="uid://oxmru1t5t4es" path="res://assets/OCRAEXT.TTF" id="2_cv72t"]
[ext_resource type="StyleBox" uid="uid://davrpty76ofg2" path="res://button_hover_style.tres" id="3_ci2d1"]
[ext_resource type="StyleBox" uid="uid://op35ttd8mxeq" path="res://button_press_style.tres" id="4_ronp7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_784ui"]
bg_color = Color(0.592157, 0.435294, 0.294118, 0.784314)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tsh4m"]
bg_color = Color(0.74902, 0.572549, 0.415686, 0.784314)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.0923971, 0.0923971, 0.092397, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="Minigames2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hk1s2")

[node name="Panel1" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_784ui")

[node name="Panel2" type="Panel" parent="Panel1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -528.0
offset_top = -349.5
offset_right = 528.0
offset_bottom = 349.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tsh4m")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel1/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -305.5
offset_top = -96.5
offset_right = 305.5
offset_bottom = 96.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ResultLabel" type="Label" parent="Panel1/Panel2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_cv72t")
theme_override_font_sizes/font_size = 48
text = "Result:"

[node name="ScoreLabel" type="Label" parent="Panel1/Panel2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_cv72t")
theme_override_font_sizes/font_size = 48
text = "Score:"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel1/Panel2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="RockButton" type="Button" parent="Panel1/Panel2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("2_an4yq")
theme_override_styles/hover = ExtResource("3_ci2d1")
theme_override_styles/pressed = ExtResource("4_ronp7")
text = " Rock "

[node name="PaperButton" type="Button" parent="Panel1/Panel2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("2_an4yq")
theme_override_styles/hover = ExtResource("3_ci2d1")
theme_override_styles/pressed = ExtResource("4_ronp7")
text = " Paper "

[node name="ScissorsButton" type="Button" parent="Panel1/Panel2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 56
theme_override_styles/normal = ExtResource("2_an4yq")
theme_override_styles/hover = ExtResource("3_ci2d1")
theme_override_styles/pressed = ExtResource("4_ronp7")
text = " Scissors "
